refactor(platform): remove community functionality
